<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="#F1edf2ff"
        android:alpha="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/store_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="Developers"
                android:textColor="#374788"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:text="Jessica Yao"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/jess_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="@string/link_for_jess"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="Nabeera Naeem"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nabeera_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="@string/link_for_nabeera"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="Jack Bouman"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/jack_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="@string/link_for_jack"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="Sadman Sakib"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sadman_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="@string/link_for_sadman"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="Marc Kohlmann"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/marc_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000"
                android:textSize="15sp"
                android:text="@string/link_for_marc"/>


            <!--         Close and delete button are below:-->
            <RelativeLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/developer_close_button"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:text="Close"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>